# Sandbox-2D

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  buildDebug.sh  packageLinux.sh  packageMac.sh
assets/: adjectives.txt  nouns.txt  splash.json  splash.txt
assets/shaders/: clip.fs  grayscale.fs  water.fs  water.vs
include/: constants.hpp
include/game/: gameState.hpp  loadingState.hpp  menuState.hpp  state.hpp
include/mngr/: input.hpp  resource.hpp  sound.hpp
include/objs/: console.hpp  furniture.hpp  generation.hpp  inventory.hpp  item.hpp  map.hpp  player.hpp
include/ui/: bar.hpp  button.hpp  checkbox.hpp  input.hpp  keybindIndicator.hpp  popup.hpp  scrollframe.hpp
include/util/: button.hpp  config.hpp  debug.hpp  fileio.hpp  format.hpp  input.hpp  math.hpp  parallax.hpp  position.hpp  random.hpp  render.hpp  strarray.hpp
src/: main.cpp
src/game/: game.cpp  gameState.cpp  loadingState.cpp  menuState.cpp  state.cpp
src/mngr/: input.cpp  resource.cpp  sound.cpp
src/objs/: console.cpp  furniture.cpp  generation.cpp  inventory.cpp  item.cpp  map.cpp  player.cpp
src/ui/: bar.cpp  button.cpp  checkbox.cpp  input.cpp  keybindIndicator.cpp  popup.cpp  scrollframe.cpp
src/util/: button.cpp  debug.cpp  fileio.cpp  format.cpp  input.cpp  parallax.cpp  position.cpp  render.cpp
